--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -29,6 +29,46 @@
             font-size: 0.8125rem;
             font-weight: bold;
         }
+        .style_family {
+            background-color: #90e0ef;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_parent1 {
+            background-color: #48cae4;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_parent2 {
+            background-color: #90e0ef;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_child1 {
+            background-color: #48cae4;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_child2 {
+            background-color: #90e0ef;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_child3 {
+            background-color: #48cae4;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_child4 {
+            background-color: #90e0ef;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
+        .style_others {
+            background-color: #023e8a;
+            padding: 1px 10px;
+            border-radius: 15px;
+        }
         .formatted_column_value_error {
             color: white;
             background-color: #f94144;
