fix import members

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -294,7 +294,7 @@
 
     {% if result %}
             <div id="results_by_row">
-                <a href="javascript:showRowsByClass('all')"><span id="all_rows">{% trans 'Show all rows' %}</span></a> &nbsp;
+                <a href="javascript:showRowsByClass('all')"><span id="all_rows">{% trans 'Show all rows' %} &nbsp;&nbsp; <span id="rows_count">{{ result.rows_summary.total }}</span></span></a> &nbsp;
                 <a href="javascript:showRowsByClass('ok')"><span id="rows_imported_ok">{% trans 'Imported Ok' %} &nbsp;&nbsp; <span id="rows_count">{{ result.rows_summary.imported_ok }}</span></span></a> &nbsp;
                 <a href="javascript:showRowsByClass('warning')"><span id="rows_imported_warning">{% trans 'Imported warning' %} &nbsp;&nbsp; <span id="rows_count">{{ result.rows_summary.imported_warning }}</span></span></a> &nbsp;
                 <a href="javascript:showRowsByClass('error')"><span id="rows_not_imported">{% trans 'Not imported' %} &nbsp;&nbsp; <span id="rows_count">{{ result.rows_summary.not_imported }}</span></span></a> &nbsp;
