--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -65,7 +65,7 @@
             border-radius: 15px;
         }
         .style_others {
-            background-color: #023e8a;
+            background-color: #90e0ef;
             padding: 1px 10px;
             border-radius: 15px;
         }
