--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -65,7 +65,8 @@
             border-radius: 15px;
         }
         .style_others {
-            background-color: #90e0ef;
+            background-color: #0077b6;
+            color: white;
             padding: 1px 10px;
             border-radius: 15px;
         }
@@ -94,37 +95,49 @@
             padding: 1px 10px;
             color: darkslategrey;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_status_not_modified {
-            background-color: lightgray;
             padding: 1px 10px;
-            color: darkslategrey;
+            color: darkgray;
+            border: 1px dashed darkgray;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_status_created {
             background-color: #277da1;
             padding: 1px 10px;
             color: white;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_status_updated {
             {#background-color: #f8961e;#}
             padding: 1px 10px;
             color: lightslategrey;
-            border: 1px solid lightslategrey;
+            border: 1px dashed lightslategrey;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_status_error {
             background-color: #f94144;
             padding: 1px 10px;
             color: lightgray;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_status_omitted {
             background-color: lightgray;
             padding: 1px 10px;
             color: darkslategrey;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .imported_model_error {
             background-color: #f94144;
