--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_members.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/import_members.html
@@ -14,7 +14,7 @@
             <li>{% trans 'The columns must be in the following order' %}:
                 <ul>
                 {% for column in excel_columns %}
-                    <li><span class="{{ column.style }}">{% trans 'Column' %} {{ column.letter }}:  {{ column.label }}</span></li>
+                    {{ column | excel_column_to_html }}
                 {% endfor %}
                 </ul>
             </li>
