add edition code. fix afterschool importer

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/base_import.html
@@ -117,8 +117,8 @@
         .imported_model_status_updated {
             {#background-color: #f8961e;#}
             padding: 1px 10px;
-            color: lightslategrey;
-            border: 1px dashed lightslategrey;
+            color: darkgray;
+            border: 1px dashed darkgray;
             border-radius: 15px;
             margin-top: 3px;
             display: inline-block;
@@ -156,6 +156,8 @@
             padding: 1px 10px;
             color: black;
             border-radius: 15px;
+            margin-top: 3px;
+            display: inline-block;
         }
         .row_state_error {
             text-transform: uppercase;
