--- a/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
+++ b/software_components/app_server/ampa_members_manager_project/templates/admin/index.html
@@ -2,156 +2,85 @@
 {% load i18n %}
 {% load static %}
 
+{% block extrahead %}
+
+    <style>
+
+        #content {
+            max-width: none !important;
+            width: 100% !important;
+        }
+
+        .admin-apps-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        
+        .admin-apps-container .module {
+            flex: 0 1 200px;
+            display: flex;
+            flex-direction: column;
+            box-sizing: border-box;
+            margin-bottom: 50px;
+            float: none !important;
+            clear: none !important;
+            width: 250px !important;
+        }
+
+        .admin-apps-container .module {
+            flex: 0 1 200px;
+            display: flex;
+            flex-direction: column;
+            box-sizing: border-box;
+            margin-bottom: 50px;
+        }
+
+        .admin-apps-container .module table {
+            width: 100%;
+        }
+
+        .admin-apps-container .module {
+            float: none !important;
+            clear: none !important;
+        }
+    </style>
+
+{% endblock %}
+
 {% block content %}
 
 {% if menu %}
-  {% for app in menu %}
-    <div class="app-{{ app.app_label }} module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
-      <table>
-        <caption>
-          <a href="{{ app.app_url }}" class="section">{{ app.name }}</a>
-        </caption>
-        {% for model in app.models %}
-          {% with model_name=model.object_name|lower %}
-            <tr class="model-{{ model_name }}{% if model.admin_url in request.path|urlencode %} current-model{% endif %}">
-              <th scope="row" id="{{ app.app_label }}-{{ model_name }}">
-                {% if model.admin_url %}
-                  <a href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
-                {% else %}
-                  {{ model.name }}
-                {% endif %}
-              </th>
-              <th>&nbsp;</th>
-            </tr>
-          {% endwith %}
-        {% endfor %}
-      </table>
-    </div>
-  {% endfor %}
+  <div class="admin-apps-container">
+    {% for app in menu %}
+      <div class="app-{{ app.app_label }} module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
+        <table>
+          <caption>
+            <a href="{{ app.app_url }}" class="section">{{ app.name }}</a>
+          </caption>
+          {% for model in app.models %}
+            {% with model_name=model.object_name|lower %}
+              <tr class="model-{{ model_name }}{% if model.admin_url in request.path|urlencode %} current-model{% endif %}">
+                <th scope="row" id="{{ app.app_label }}-{{ model_name }}">
+                  {% if model.admin_url %}
+                    <a href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
+                  {% else %}
+                    {{ model.name }}
+                  {% endif %}
+                </th>
+                <th>&nbsp;</th>
+              </tr>
+            {% endwith %}
+          {% endfor %}
+        </table>
+      </div>
+    {% endfor %}
+  </div>
 {% else %}
   <p>{% translate 'You don’t have permission to view or edit anything.' %}</p>
 {% endif %}
 
 {% endblock %}
 
-
 {% block sidebar %}
-    {% comment %}
-
-    <div id="content-related">
-        <div class="module" id="recent-actions-module">
-            <h1><img src="{% static 'images/checklist.png' %}" width="24px"> <a href="/ampa/validations/">Validar datos
-                de familias (Tarda +1 min en cargar)</a></h1>
-            <h1><img src="{% static 'images/xls.png' %}" width="24px"> Importar datos de excel</h1>
-            <ul>
-                <li><a href="/ampa/members/import/">Socios</a></li>
-                <li>Cuenta ikastola
-                    <ul>
-                        <li><a href="/ampa/family-email/import/">Registrar</a></li>
-                        <li><a href="/ampa/family-email/check/">Comprobar</a></li>
-                    </ul>
-                </li>
-                <li><a href="/ampa/custody/import/">Custodia</a></li>
-                <li>Extraescolares
-                    <ul>
-                        <li><a href="/ampa/afterschools-activities/import/">Actividades</a></li>
-                        <li><a href="/ampa/afterschools-registrations/import/">Inscripciones</a></li>
-                    </ul>
-                </li>
-                <li><a href="/ampa/camps/import/">Campamentos</a></li>
-            </ul>
-            <h1><img src="{% static 'images/member.png' %}" width="24px"> <a href="/ampa/members/check/">Consultar
-                socios subiendo un excel</a></h1>
-            <h1><img src="{% static 'images/family.png' %}" width="24px"> Alta de familia</h1>
-            <ul>
-                <li>Confirma que la familia no exista usando los <a href="/admin/ampa_manager/family/">filtros y la
-                    búsqueda</a></li>
-                <li><a href="/admin/ampa_manager/family/add/">Completa los datos de la familia</a></li>
-                <li>Opcional: crear un padre/madre si no existe</li>
-                <li>Clic en "Agregar hijo adicional" y completa los datos</li>
-                <li>Clic en botón GUARDAR</li>
-            </ul>
-            <h1><img src="{% static 'images/parent.png' %}" width="24px"> Alta de padre/madre</h1>
-            <ul>
-                <li>Confirma que el tutor no exista usando los <a href="/admin/ampa_manager/parent/">filtros y la
-                    búsqueda</a></li>
-                <li><a href="/admin/ampa_manager/parent/add/">Completa los datos dek tutor</a></li>
-                <li>Opcional: clic en "Agregar cuenta bancaria adicional" y completa los datos</li>
-                <li>Clic en botón GUARDAR</li>
-            </ul>
-            <h1><img src="{% static 'images/child.png' %}" width="24px"> Alta de hijo/a</h1>
-            <ul>
-                <li>Confirma que el hijo/a no exista usando los <a href="/admin/ampa_manager/child/">filtros y la
-                    búsqueda</a></li>
-                <li><a href="/admin/ampa_manager/child/add/">Completa los datos</a></li>
-                <li>Clic en botón GUARDAR</li>
-            </ul>
-            <h1><img src="{% static 'images/member.png' %}" width="24px"> Convertir familias en socias</h1>
-            <ul>
-                <li>Abre la sección <a href="/admin/ampa_manager/family/">"Familias"</a></li>
-                <li>Usa los filtros y búsqueda para localizar las familias</li>
-                <li>Selecciona las familias:</li>
-                <ul>
-                    <li>Marca el check de una fila para seleccionarla</li>
-                    <li>Marca el check de la fila de títulos para seleccionar todas las familias de la página actual
-                    </li>
-                    <li>Marca el check anterior 🡹 y después click en "Seleccionar todas las # familias" para seleccionar
-                        todas las familias que cumplen el filtro actual (de todas las páginas)
-                    </li>
-                </ul>
-                <li>Ejecutar acción "Convertir las familias en socias"</li>
-            </ul>
-            <h1><img src="{% static 'images/activity.png' %}" width="24px"> Alta de actividad</h1>
-            <ul>
-                <li>Confirma que la actividad no exista usando los <a href="/admin/ampa_manager/activity/">filtros y la
-                    búsqueda</a></li>
-                <li><a href="/admin/ampa_manager/activity/add/">Completa los datos de la actividad</a></li>
-                <li>Añadir los períodos de actividad necesarios</li>
-                <li>Clic en botón GUARDAR</li>
-            </ul>
-            <h1><img src="{% static 'images/add-user.png' %}" width="24px"> Apuntar a actividad</h1>
-            <ul>
-                <li>Confirma que el alumno no esté ya apuntado usando los <a
-                        href="/admin/ampa_manager/activityregistration/">filtros y la búsqueda</a></li>
-                <li><a href="/admin/ampa_manager/activityregistration/add/">Apuntar a la actividad</a></li>
-                <ul>
-                    <li>Al desplegar lista de cuentas, pulsar inicial del titular para localizar cuenta</li>
-                    <li>Al desplegar lista de hijos, pulsar inicial del nombre para localizar cuenta</li>
-                    <li>Clic en botón GUARDAR</li>
-                </ul>
-            </ul>
-            <h1><img src="{% static 'images/money.png' %}" width="24px"> Generar remesa de socios</h1>
-            <ul>
-                <li>Abre la sección <a href="/admin/ampa_manager/family/">"Familias"</a></li>
-                <li>Selecciona todas las familias</li>
-                <li>Ejecutar acción "Generar la remesa de socios del año activo"</li>
-                <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_manager/membershipremittance/">"Remesas
-                    de socios"</a></li>
-            </ul>
-            <h1><img src="{% static 'images/money.png' %}" width="24px"> Generar remesa de actividad</h1>
-            <ul>
-                <li>Abre la sección <a href="/admin/ampa_manager/activityperiod/">"Períodos de actividad"</a></li>
-                <li>Selecciona los períodos de actividad requeridos</li>
-                <li>Ejecutar acción "Crear remesa de actividad"</li>
-                <li>Comprobar la nueva remesa en la sección <a href="/admin/ampa_manager/activityremittance/">"Remesas
-                    de actividad"</a></li>
-            </ul>
-            <h1><img src="{% static 'images/receipt.png' %}" width="24px"> Cambiar el estado de los recibos</h1>
-            <ul>
-                <li>Abre la sección de recibos</li>
-                <ul>
-                    <li><a href="/admin/ampa_manager/activityreceipt/">"Recibos de actividad"</a></li>
-                    <li><a href="/admin/ampa_manager/membershipreceipt/">"Recibos de socios"</a></li>
-                </ul>
-                <li>Aplicar los filtros necesarios y seleccionar los recibos a actualizar</li>
-                <li>Ejecutar acción "Marcar como envíado/pagado"</li>
-            </ul>
-            <h1><img src="{% static 'images/statistics.png' %}" width="24px"> Ver las estadísticas</h1>
-            <ul>
-                <li>Abre la sección <a href="/admin/ampa_manager/activecourse/1/change/">"Curso activo"</a></li>
-            </ul>
-        </div>
-    </div>
-
-    {% endcomment %}
 {% endblock %}
