--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/generate_members_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/generate_members_remittance.html
@@ -13,17 +13,31 @@
 {% endblock %}
 
 {% block content %}
-    <div id="instructions" class="main-container">
-        <h2>{% trans 'Course' %}: {{ active_course }}</h2>
-        <h3>{% trans 'Members' %}</h3>
-        <ul>
-            <li>{% trans 'This course' %}: {{ active_course_members_count }}</li>
-            <li>{% trans 'Last course' %}: {{ last_course_members_count }}</li>
-        </ul>
-        <h3>{% trans 'Fee' %}</h3>
-        <ul>
-            <li>{% trans 'This course' %}: {{ active_course_fee }}</li>
-            <li>{% trans 'Last course' %}: {{ last_course_fee }}</li>
-        </ul>
+    <div id="upload_form" class="main-container">
+        <h2>Info</h2>
+
+        <div class="mb-3">
+          <label for="last_course_fee" class="form-label"><a href="{{ fee_link }}" target="_new">{% trans 'Last course fee' %}</a></label>
+          <input type="text" id="last_course_fee" class="form-control" value="{{ last_course_fee }}" disabled>
+        </div>
+        <div class="mb-3">
+          <label for="last_course_members_count" class="form-label"><a href="{{ membership_link }}" target="_new">{% trans 'Last course members' %}</a></label>
+          <input type="text" id="last_course_members_count" class="form-control" value="{{ last_course_members_count }}" disabled>
+        </div>
+        <div class="mb-3">
+          <label for="active_course_members_count" class="form-label"><a href="{{ membership_link }}" target="_new">{% trans 'Active course members' %}</a></label>
+          <input type="text" id="active_course_members_count" class="form-control" value="{{ active_course_members_count }}" disabled>
+        </div>
+        <div class="mb-3">
+          <label for="active_course_members_remittance_count" class="form-label"><a href="{{ membership_remittance_link }}" target="_new">{% trans 'Remittances already generated' %}</a></label>
+          <input type="text" id="active_course_members_remittance_count" class="form-control" value="{{ active_course_members_remittance_count }}" disabled>
+        </div>
+
+        <h2>{% trans 'Complete' %}</h2>
+        <form action="{{ view_url }}" enctype="multipart/form-data" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="{% blocktrans with course=active_course %}Generate members remittance for course {{ active_course }}{% endblocktrans %}">
+        </form>
     </div>
 {% endblock %}
