update generate_members_remittance template to use trans tag for the header text

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/generate_members_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/generate_members_remittance.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div id="upload_form" class="main-container">
-        <h2>Info</h2>
+        <h2>{% trans 'Check' %}</h2>
 
         <div class="mb-3">
           <label for="last_course_fee" class="form-label"><a href="{{ fee_link }}" target="_new">{% trans 'Last course fee' %}</a></label>
