--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/import_after_school_activities.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/importers/import_after_school_activities.html
@@ -1,4 +1,4 @@
-{% extends 'base_import.html' %}
+{% extends 'importers/base_import.html' %}
 {% load custom_filters %}
 {% load i18n %}
 {% load static %}
