--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/base_email.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/base_email.html
@@ -8,14 +8,15 @@
   <style>
     body { font-family: Arial, sans-serif; color: #333; }
     .container {
-      border: 1px solid #ddd;
+      border: 0px solid #ddd;
       border-radius: 8px;
       padding: 20px;
       max-width: 600px;
       margin: auto;
     }
-    h1 { color: #007bff; }
+    h1 { color: #000000; }
     p { font-size: 15px; }
+    li { font-size: 15px; }
   </style>
 </head>
 <body>
