--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/membership_remittance_notice.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/membership_remittance_notice.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content_eu %}
-    <p>Datozen egunetan AFAko bazkide kuota kobratuko dizugu {{ course }} ikasturterako.</p>
+    <p>Datozen egunetan IFEko bazkide kuota kobratuko dizugu {{ course }} ikasturterako.</p>
     <ul>
         <li>Kobrantza-data: {{ pay_date }}</li>
         <li>Zenbateko: {{  pay_amount }}</li>
