update email templates with corrected phrasing and improved grammar in Spanish and Basque texts

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/base_email.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/base_email.html
@@ -27,13 +27,13 @@
 
     {% block content_es %}{% endblock %}
     <p>Para cualquier duda, responde a este correo.</p>
-    <p><i>Asociación de Familias de Alumnado. Ikastola Abendaño</i></p>
+    <p><i>Asociación de Familias del Alumnado. Ikastola Abendaño</i></p>
 
     <p>-------------------------------------------</p>
 
     {% block content_eu %}{% endblock %}
     <p>Zalantzarik izanez gero, erantzun mezu honi.</p>
-    <p><i>Ikasleen Familia Elkarte. Abendaño ikastola</i></p>
+    <p><i>Ikasleen Familia Elkartea. Abendaño ikastola</i></p>
 
   </div>
 </body>
