--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/membership_renew.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/emails/membership_renew.html
@@ -1,7 +1,7 @@
 {% extends 'emails/base_email.html' %}
 
 {% block content_es %}
-    <p>En los próximos días iniciamos la campaña de socios para este curso {{ course }}. </p>
+    <p>Próximamente iniciamos la campaña de socios para este curso {{ course }}. </p>
 
     {% if option == "RENEW" %}
         <p>Según los datos que tenemos, el año pasado vuestra familia fue socia y vuestros hijos/as siguen en la ikastola. <b>Este año se os volverá a pasar la cuota a la cuenta terminada en {{ account_last_4_digits }}</b>.</p>
