--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}{% trans 'Generate members remittance' %}{% endblock %}
 
 {% block extrahead %}
     <style>
@@ -53,7 +53,7 @@
 {% block breadcrumbs %}
     <div class="breadcrumbs">
       <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-      &rsaquo; {{ title }}
+      &rsaquo; {% trans 'Generate members remittance' %}
     </div>
 {% endblock %}
 
@@ -82,20 +82,17 @@
         <form action="{{ view_url }}" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         {{ form.as_p }}
+
+        {% if remittance %}
+            <h1>{% trans 'The remittance has been generated' %}</h1>
+        {% endif %}
+
         <input type="submit" value="{% blocktrans with course=active_course %}Generate members remittance for course {{ active_course }}{% endblocktrans %}" {% if remittance %}disabled{% endif %}>
+        <input type="button" value="{% trans 'Open generated remittance' %}" onclick="window.open('{{ remittance_instance_url }}', '_blank');" {% if not remittance %}disabled{% endif %}>
+        <input type="button" value="{% trans 'Notify families by email' %}" onclick="window.open('{{ notify_families_url }}', '_blank');" {% if not remittance %}disabled{% endif %}>
+        <input type="button" value="{% trans 'Cancel' %}" onclick="window.open('{% url 'admin:index' %}', '_blank');">
+
         </form>
     </div>
-
-    {% if remittance_instance_url %}
-
-    <div id="result">
-        <h2>{% trans 'The remittance has been generated' %}</h2>
-        <input type="button" value="{% trans 'Open generated remittance' %}" onclick="window.open('{{ remittance_instance_url }}', '_blank');">
-        <input type="button" value="{% trans 'Notify families by email' %}" onclick="window.open('{{ notify_families_url }}', '_blank');">
-    </div>
-    <button type="submit" class="button default">{% trans 'Notify families' %}</button>
-    <a href="{% url '...' %}" class="button default">{% trans 'Notify families' %}</a>
-
-    {% endif %}
 
 {% endblock %}
