update error display in notification results to show family email and secondary email; modify `FamiliesNotifierResult` to use family object instead of ID; add `replace_if_none` filter for handling optional values

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/notifiers/notify_membership_campaign.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/notifiers/notify_membership_campaign.html
@@ -118,7 +118,7 @@
                 <div class="result_container">
                     <h1>{% trans 'Errors sending mail' %}</h1>
                     <h2>{% trans 'Notified families' %}: {{ result.notified_families_ids|length }}</h2>
-                    <h2>{% trans 'Error family' %}: {{ result.error_family_id }}</h2>
+                    <h2>{% trans 'The error happened sending mail to' %}: {{ result.error_family.email }}, {{ result.error_family.secondary_email|replace_if_none:"-" }}</h2>
                     <h2>{% trans 'Error' %}: {{ result.error }}</h2>
                 </div>
             {% else %}
