update phrasing in templates for clearer instructions and integrate custom admin menu in membership campaign notification view

--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/notifiers/notify_membership_campaign.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/notifiers/notify_membership_campaign.html
@@ -98,7 +98,7 @@
 
 {% block content %}
     <div id="upload_form" class="main-container">
-        <h2>{% trans 'Check' %}</h2>
+        <h2>{% trans 'Review the following information' %}</h2>
 
         <div class="mb-3">
           <label for="families_renew_count" class="form-label"><a href="{{ families_renew_url }}" target="_new">{% trans 'Last year members that will renew' %}</a></label>
