--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
@@ -122,10 +122,15 @@
         {% csrf_token %}
         {{ form.as_p }}
 
-        {% if remittance_instance_url %}
+        {% if action_done %}
             <div class="result_container">
-                <h1>{% trans 'The remittance has been generated' %}</h1>
-            </div>
+                {% if error %}
+                    <h1>{% trans 'Unable to generate remittance' %}</h1>
+                    <h2>{% trans 'Error' %}: {{ error }}</h2>
+                {% else %}
+                    <h1>{% trans 'The remittance has been generated' %}</h1>
+                </div>
+            {% endif %}
         {% endif %}
 
         <input type="submit" value="{% blocktrans with course=active_course %}Generate members remittance for course {{ active_course }}{% endblocktrans %}" {% if remittance %}disabled{% endif %}>
