--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/templates/remittance_generators/generate_membership_remittance.html
@@ -139,7 +139,8 @@
         <input type="submit" value="{% blocktrans with course=active_course %}Generate members remittance for course {{ active_course }}{% endblocktrans %}" {% if remittance %}disabled{% endif %}>
         <input type="button" value="{% trans 'Open generated remittance' %}" onclick="window.open('{{ remittance_instance_url }}', '_blank');" {% if not remittance %}disabled{% endif %}>
         <input type="button" value="{% trans 'Notify families by email' %}" onclick="window.open('{{ notify_families_url }}', '_blank');" {% if not remittance %}disabled{% endif %}>
-        <input type="button" value="{% trans 'Import members' %}" onclick="window.open('{{ import_members_url }}', '_blank');">
+        <input type="button" value="{% trans 'Import new members' %}" onclick="window.open('{% url 'import_members' %}', '_blank');">
+        <input type="button" value="{% trans 'Copy last course members' %}" onclick="window.open('{% url 'copy_last_course_members' %}', '_blank');">
         <input type="button" value="{% trans 'Cancel' %}" onclick="window.open('{% url 'admin:index' %}', '_blank');">
 
         </form>
